--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,5 +15,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "src/loggingMiddleWare/index.ts"]
+  "include": ["src", "../loggingMiddleWare/index.ts"]
 }
